# TD3-Rust

./: Cargo.toml  README.md  db.csv  td3.md
src/: main.rs
tests/: cli.rs
