[package]
name = "TD3-Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable = "0.10.0"
rayon = "1.10.0"
colored = "2.1.0"
once_cell = "1.19.0"
indicatif = "0.17.8"
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.13.0"
